# Boards_BackEnd

./: README.md
boards/: pyproject.toml
boards/boardsapp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
boards/boardsapp/migrations/: 0001_initial.py
boards/discussion_board/: settings.py  urls.py
