[tool.poetry]
name = "boards"
version = "0.1.0"
description = ""
authors = ["dedoxd2 <dedo.xd33@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.8"
python-decouple = "^3.8"
django-suit = {url = "https://github.com/darklow/django-suit/tarball/v2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
